chore: added some new fitures

--- a/index.html
+++ b/index.html
@@ -4,19 +4,31 @@
     <meta charset="UTF-8">
     <title>NorseBee Sail&Ski</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Norsebee is a website for booking guided tours and courses.">
+    <meta name="keywords" content="norsbee, sail, ski, tours, guide, courses">
+    <meta name="author" content="Truls Johan">
+    <script src="https://kit.fontawesome.com/df982ece98.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/component.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <script src="js/script.js" defer></script>
 </head>
 
 <body>
     <header>
-        <nav class="navbar">
-            <a href="">
-                <img src="" alt="logo">
-            </a>
+        <nav>
+            <div class="logo-container">
+                <a href="index.html">
+                    <img src="" alt="logo">
+                </a>
+                <div class="logo-background"></div>
+            </div>
             <!-- tours, courses, about btns or menu -->
             <ul class="desktop-nav">
                 <li class="navbtn-container">
-                    <a href="">
+                    <a href="index.html">
                         <button class="nav-btn">Home</button>
                         <div class="btn-background"></div>
                     </a>
@@ -85,3 +97,4 @@
     <footer>
     </footer>
 </body>
+
