chore: made the header and hero banner

--- a/index.html
+++ b/index.html
@@ -36,29 +36,31 @@
             </ul>
             <!-- search instead of navbtns? -->
             <label for="search"></label>
-            <input type="text" id="search" name="search">
+            <input type="text" id="search" name="search" placeholder="Search here...">
 
-            <label for="nav-menu">
-                <div class="manu-container">
-                    <svg class="burger-menu"></svg>
-                    <div class="menu-background"></div>
+            <div class="menu">
+                <div class="menu-container">
+                    <div class="menu-btn menu-size">
+                        <img src="img/burger-menu.svg" alt="burger-menu">
+                    </div>
+                    <div class="menu-background menu-size"></div>
                 </div>
-            </label>
-            <input type="checkbox" id="nav-menu" name="nav-menu">
+            </div>
         </nav>
     </header>
 
-    <body>
-        <section class="hero-banner">
-            <img src="" alt="hero-banenr">
-            <div>
-                <h2 class="name">NorseBee Sail&Ski</h2>
-                <p class="catch-phrase">
+    <main>
+        <section class="hero-section">
+            <div class="hero-content">
+                <h1 class="name text">NorseBee Sail&Ski</h1>
+                <p class="catch-phrase text">
                     Discover safe adventures in harsh environments.
                 </p>
-                <div class="mainbtn-container">
-                    <button class="main-btn">Tours</button>
-                    <div class="mainbtn-background"></div>
+                <div class="btn">
+                    <div class="mainbtn-container">
+                        <button class="main-btn btn-size">Tours</button>
+                        <div class="mainbtn-background btn-size"></div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -72,8 +74,8 @@
                 <h3 class="section-headers"></h3>
                 <p class="section-p"></p>
                 <div class="mainbtn-container">
-                    <button class="main-btn">Guided tours</button>
-                    <div class="mainbtn-background"></div>
+                    <button class="main-btn btn-size">Guided tours</button>
+                    <div class="mainbtn-background btn-size"></div>
                 </div>
             </div>
         </section>
@@ -92,7 +94,7 @@
                 <div class="img-background"></div>
             </div>
         </section>
-    </body>
+    </main>
 
     <footer>
     </footer>
